Added New Files

--- a/index.html
+++ b/index.html
@@ -4,11 +4,159 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Oknee Global Concepts Limited</title>
+    <!--change dis to favi Icons-->
+    <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
+    <!--Google Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Aldrich&display=swap" rel="stylesheet">
+    <!--Our own stylesheet-->
+    <link rel="stylesheet" href="app.css">
 </head>
 
 <body>
 
+    <header>
+        <div class="container">
+            <nav>
+                <div class="nav-brand">
+                    <a href="index.html">
+                        <img src="images/logo.png" alt="">
+                    </a>
+                </div>
+
+                <div class="menu-icons open">
+                    <i class="icon ion-md-menu"></i>
+                </div>
+
+                <ul class="nav-list">
+                    <div class="menu-icons close">
+                        <i class="icon ion-md-close"></i>
+                    </div>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link current">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Booking</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Home</a>
+                    </li>
+                </ul>
+
+            </nav>
+        </div>
+    </header>
+
+
+    <!--Section Starts here-->
+    <main>
+        <section class="hero">
+            <div class="container">
+                <div class="main-message">
+                    <h3>The great Outdoors</h3>
+                    <h1>Adventure</h1>
+                    <p>Culpa deserunt sunt minim labore minim veniam est anim occaecat occaecat cupidatat. Fugiat veniam
+                        laborum exercitation commodo sint incididunt fugiat occaecat.
+                        duis.</p>
+                    <div class="cta">
+                        <a href="#" class="btn">Try now</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="experience-outdoors">
+            <div class="container">
+                <div class="title-heading">
+                    <h3>Experience</h3>
+                    <h1>The thrilling Outdoors</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. !</p>
+                </div>
+
+                <div class="activities-grid">
+                    <!--grid item #1-->
+                    <div class="activities-grid-item star-gazing">
+                        <i class="icon ion-md-star"></i>
+                        <h1>Star Gazing</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil accusamus id eius corporis ad
+                            numquam at aut laudantium adipisci sit doloribus saepe, et nobis tenetur repellendus
+                            corrupti impedit nemo unde.</p>
+                    </div>
+                    <!--grid item #2-->
+                    <div class="activities-grid-item hiking">
+                        <i class="icon ion-md-compass"></i>
+                        <h1>Star Gazing</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil accusamus id eius corporis ad
+                            numquam at aut laudantium adipisci sit doloribus saepe, et nobis tenetur repellendus
+                            corrupti impedit nemo unde.</p>
+                    </div>
+                    <!--grid item #3-->
+                    <div class="activities-grid-item camping">
+                        <i class="icon ion-md-bonfire"></i>
+                        <h1>Camping</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil accusamus id eius corporis ad
+                            numquam at aut laudantium adipisci sit doloribus saepe, et nobis tenetur repellendus
+                            corrupti impedit nemo unde.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="testimonials">
+            <div class="container">
+                <div class="testimonial">
+                    <div class="testimonial-text-box">
+                        <p>This this is the awamish I cant wait to do it all over again</p>
+                        <i class="icon ion-md-quote"></i>
+                    </div>
+                    <div class="testimonial-customer">
+                        <img src="images/profile-pic.jpg" alt="" />
+                        <h1>Okoli Praise.</h1>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="begin-adventure">
+            <div class="container">
+                <div class="title-heading">
+                    <h3>Let the</h3>
+                    <h1>work beinds</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. !</p>
+                </div>
+                <div class="adventure-grid">
+                    <!--Adv-->
+                    <div class="adventure-grid-item">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis, sunt error quia id omnis
+                            repellat fuga deleniti atque voluptatum. Laborum provident repellendus tempore sint!
+                            Voluptates veniam corporis laudantium quae earum?</p>
+                    </div>
+                    <!--Adv 2-->
+                    <div class="adventure-grid-item">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis, sunt error quia id omnis
+                            repellat fuga deleniti atque voluptatum. Laborum provident repellendus tempore sint!
+                            Voluptates veniam corporis laudantium quae earum?
+                        </p>
+                    </div>
+
+                </div>
+                <a href="#" class="btn">Book your Adventure</a>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2020 OKOlI PRAISE. All rights reserved</p>
+    </footer>
+
+    <script type="text/javascript" src="app.js"></script>
 </body>
 
 </html>
