Added Some changes

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <i class="icon ion-md-quote"></i>
                     </div>
                     <div class="testimonial-customer">
-                        <img src="images/profile-pic.jpg" alt="" />
+                        <img src="images/p.png" alt="" />
                         <h1>Okoli Praise.</h1>
                     </div>
                 </div>
