Did Some Changes

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <h3>The great Outdoors</h3>
                     <h1>Adventure</h1>
                     <p>Culpa deserunt sunt minim labore minim veniam est anim occaecat occaecat cupidatat. Fugiat veniam
-                        laborum exercitation commodo sint incididunt fugiat occaecat.
+                        laborum exercitation commodo sint incididunt fugiatiy
                         duis.</p>
                     <div class="cta">
                         <a href="#" class="btn">Try now</a>
