--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         laborum exercitation commodo sint incididunt fugiatiy
                         duis.</p>
                     <div class="cta">
-                        <a href="#" class="btn">Try now</a>
+                        <a href="#" class="btn">welcome</a>
                     </div>
                 </div>
             </div>
