--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <a href="#" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Home</a>
+                        <a href="#" class="nav-link">Shippings</a>
                     </li>
                 </ul>
 
@@ -66,7 +66,7 @@
                         laborum exercitation commodo sint incididunt fugiatiy
                         duis.</p>
                     <div class="cta">
-                        <a href="#" class="btn">welcome</a>
+                        <a href="#" class="btn">welcome</a>6897y88
                     </div>
                 </div>
             </div>
