--- a/index.html
+++ b/index.html
@@ -152,8 +152,16 @@
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2020 OKOlI PRAISE. All rights reserved</p>
+    
+          <!--google mapping-->
+
+          <iframe class="googlemap" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3963.614125628445!2d3.3739363143268855!3d6.57028
+          8824441541!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b927ee4dbd69d%3A0xbea5d740b94af28e!2s8%20Esubiyi%20St%2C%20Mende
+          %2C%20Lagos!5e0!3m2!1sen!2sng!4v1605976928286!5m2!1sen!2sng" 
+          width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <footer>
+ 
+         <p>&copy; 2020 OKOlI PRAISE. All rights reserved</p>
     </footer>
 
     <script type="text/javascript" src="app.js"></script>
