--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oknee Global Concepts Limited</title>
     <!--change dis to favi Icons-->
+    <link href="images/shipcoloured.png" type="images/png" rel="shortcut icon" />
     <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
     <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
@@ -21,7 +22,7 @@
             <nav>
                 <div class="nav-brand">
                     <a href="index.html">
-                        <img src="images/logo.png" alt="">
+                        <img src="images/shipwhite.png" alt="">
                     </a>
                 </div>
 
@@ -37,16 +38,16 @@
                         <a href="#" class="nav-link current">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Contact</a>
+                        <a href="#" class="nav-link">Services</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link">Booking</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">About</a>
+                        <a href="#" class="nav-link">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Shippings</a>
+                        <a href="#" class="nav-link">Location</a>
                     </li>
                 </ul>
 
@@ -60,8 +61,8 @@
         <section class="hero">
             <div class="container">
                 <div class="main-message">
-                    <h3>The great Outdoors</h3>
-                    <h1>Adventure</h1>
+                    <h3>Oknee Global Concepts</h3>
+                    <h1>welcome</h1>
                     <p>Culpa deserunt sunt minim labore minim veniam est anim occaecat occaecat cupidatat. Fugiat veniam
                         laborum exercitation commodo sint incididunt fugiatiy
                         duis.</p>
@@ -127,8 +128,8 @@
         <section class="begin-adventure">
             <div class="container">
                 <div class="title-heading">
-                    <h3>Let the</h3>
-                    <h1>work beinds</h1>
+                    <h3>Kindly Know</h3>
+                    <h1>About Us</h1>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. !</p>
                 </div>
                 <div class="adventure-grid">
@@ -141,6 +142,9 @@
                     <!--Adv 2-->
                     <div class="adventure-grid-item">
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis, sunt error quia id omnis
+                            repellat fuga deleniti atque voluptatum. Laborum provident repellendus tempore sint!
+                            Voluptates veniam corporis laudantium quae earum?
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis, sunt error quia id omnis
                             repellat fuga deleniti atque voluptatum. Laborum provident repellendus tempore sint!
                             Voluptates veniam corporis laudantium quae earum?
                         </p>
