--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
                 <div class="main-message">
                     <h3>Oknee Global Concepts</h3>
                     <h1>welcome</h1>
-                    <p>Culpa deserunt sunt minim labore minim veniam est anim occaecat occaecat cupidatat. Fugiat veniam
-                        laborum exercitation commodo sint incididunt fugiatiy
-                        duis.</p>
+                    <p>Customs broker,Freight forwarding,Import & Export, Haulage,Warehousing & Contractor</p>
                     <div class="cta">
                         <a href="#" class="btn">welcome</a>
                     </div>
@@ -114,12 +112,12 @@
             <div class="container">
                 <div class="testimonial">
                     <div class="testimonial-text-box">
-                        <p>This this is the awamish I cant wait to do it all over again</p>
+                        <p>Custom Broker & C.E.O</p>
                         <i class="icon ion-md-quote"></i>
                     </div>
                     <div class="testimonial-customer">
                         <img src="images/p.png" alt="" />
-                        <h1>Okoli Praise.</h1>
+                        <h1>Aniode Okechukwu</h1>
                     </div>
                 </div>
             </div>
