--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                 <div class="main-message">
                     <h3>Oknee Global Concepts</h3>
                     <h1>welcome</h1>
-                    <p>Customs broker,Freight forwarding,Import & Export, Haulage,Warehousing & Contractor</p>
+                    <p>We deal on Customs brokerage,Freight forwarding,Import & Export, Haulage,Warehousing & Contractor</p>
                     <div class="cta">
-                        <a href="#" class="btn">welcome</a>
+                        <a href="https://www.quora.com/What-is-clearing-and-forwarding" class="btn">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -74,16 +74,16 @@
         <section class="experience-outdoors">
             <div class="container">
                 <div class="title-heading">
-                    <h3>Experience</h3>
-                    <h1>The thrilling Outdoors</h1>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. !</p>
+                    <h3>Try Out </h3>
+                    <h1>Our Services</h1>
+                    <p>We would be glad if you try out our services we render,thank you.</p>
                 </div>
 
                 <div class="activities-grid">
                     <!--grid item #1-->
                     <div class="activities-grid-item star-gazing">
                         <i class="icon ion-md-star"></i>
-                        <h1>Star Gazing</h1>
+                        <h1>Clearing</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil accusamus id eius corporis ad
                             numquam at aut laudantium adipisci sit doloribus saepe, et nobis tenetur repellendus
                             corrupti impedit nemo unde.</p>
@@ -91,18 +91,14 @@
                     <!--grid item #2-->
                     <div class="activities-grid-item hiking">
                         <i class="icon ion-md-compass"></i>
-                        <h1>Star Gazing</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil accusamus id eius corporis ad
-                            numquam at aut laudantium adipisci sit doloribus saepe, et nobis tenetur repellendus
-                            corrupti impedit nemo unde.</p>
+                        <h1>Export/Import</h1>
+                        <p>We Import goods from different Global regions and also send a product to be sold in another country eg cars,mobiles and PC's. But we dont allow illegal services.</p>
                     </div>
                     <!--grid item #3-->
                     <div class="activities-grid-item camping">
-                        <i class="icon ion-md-bonfire"></i>
-                        <h1>Camping</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil accusamus id eius corporis ad
-                            numquam at aut laudantium adipisci sit doloribus saepe, et nobis tenetur repellendus
-                            corrupti impedit nemo unde.</p>
+                        <i class="icon ion-md-home"></i>
+                        <h1>College</h1>
+                        <p>This is also known as Trucking. We lift goods/containers from one destination to another and it deals with the transporting things in trucks. </p>
                     </div>
                 </div>
             </div>
@@ -133,9 +129,8 @@
                 <div class="adventure-grid">
                     <!--Adv-->
                     <div class="adventure-grid-item">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis, sunt error quia id omnis
-                            repellat fuga deleniti atque voluptatum. Laborum provident repellendus tempore sint!
-                            Voluptates veniam corporis laudantium quae earum?</p>
+                        <p>Customs agents make the documents for 
+                            submission while rests of the documents are obtained from the client. Making shipping bill means categorization of cargo under specific classification which is an activity in the entire procedure.</p>
                     </div>
                     <!--Adv 2-->
                     <div class="adventure-grid-item">
@@ -149,7 +144,7 @@
                     </div>
 
                 </div>
-                <a href="#" class="btn">Book your Adventure</a>
+                <a href="https://wa.me/+234803312 9547" class="btn">Kindly contact us</a>
             </div>
         </section>
     </main>
@@ -162,8 +157,7 @@
           %2C%20Lagos!5e0!3m2!1sen!2sng!4v1605976928286!5m2!1sen!2sng" 
           width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         <footer>
- 
-         <p>&copy; 2020 OKOlI PRAISE. All rights reserved</p>
+         <p>&copy; 2020 OKNEE GLOBAL CONCEPTS LIMITED, All rights reserved.</p>
     </footer>
 
     <script type="text/javascript" src="app.js"></script>
