--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         <i class="icon ion-md-quote"></i>
                     </div>
                     <div class="testimonial-customer">
-                        <img src="images/p.png" alt="" />
+                        <img src="images/Author5.png" alt="" />
                         <h1>Aniode Okechukwu</h1>
                     </div>
                 </div>
@@ -134,9 +134,15 @@
                     </div>
                     <!--Adv 2-->
                     <div class="adventure-grid-item">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis, sunt error quia id omnis
+                        <p>
+                            <b>OUR MISSION:</b>
+                            <br />
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis, sunt error quia id omnis
                             repellat fuga deleniti atque voluptatum. Laborum provident repellendus tempore sint!
                             Voluptates veniam corporis laudantium quae earum?
+                             <br />
+                            <b>OUR VISION:</b>
+                            <br />
                             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis, sunt error quia id omnis
                             repellat fuga deleniti atque voluptatum. Laborum provident repellendus tempore sint!
                             Voluptates veniam corporis laudantium quae earum?
