--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <nav>
                 <div class="nav-brand">
                     <a href="index.html">
-                        <img src="images/shipwhite.png" alt="">
+                        <img src="images/shipwhite.png" alt="" class="img">
                     </a>
                 </div>
 
@@ -157,7 +157,53 @@
             </div>
         </section>
     </main>
-    
+    <!--Image slider-->
+    <div class="body">
+ <div class="slider">
+     <div class="slides">
+         <!--Radio buttons starts-->
+        <input type="radio" name="radio-btn" id="radio1">
+        <input type="radio" name="radio-btn" id="radio2">
+        <input type="radio" name="radio-btn" id="radio3">
+        <input type="radio" name="radio-btn" id="radio4">
+        <!--Radio button end-->
+        <!--Radio images starts-->
+        <div class="slide first">
+            <img src="images/bg-56.jpg" alt="" >
+        </div>
+        <div class="slide">
+            <img src="images/bg-52.jpg" alt="">
+        </div>
+        <div class="slide">
+            <img src="images/bg-38.jpg" alt="">
+        </div>
+        <div class="slide">
+            <img src="images/bg-37.jpg" alt="">
+        </div>
+        <!--Radio image end -->
+        <!--Automatic nav start-->
+        <div class="navigation-auto">
+            <div class="auto-btn1"></div>
+            <div class="auto-btn1"></div>
+            <div class="auto-btn1"></div>
+            <div class="auto-btn1"></div>
+        </div>
+        <!--Automatic nav end-->
+        </div>
+        <!--manual nav start-->
+        <div class="navigation-manual">
+            <label for="radio1" class="manual-btn"></label>
+            <label for="radio2" class="manual-btn"></label>
+            <label for="radio3" class="manual-btn"></label>
+            <label for="radio4" class="manual-btn"></label>
+        </div>
+        <!--manual nav end-->
+ </div>
+</div>
+<!--image slider ends-->
+
+
+
    
 	<!-- This div targeted by Location-->	<div id=target-map></div>
     
@@ -171,7 +217,7 @@
          <p>&copy; 2020 OKNEE GLOBAL CONCEPTS LIMITED, All rights reserved.</p>
     </footer>
 
-    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="app.js"> </script>
 
 <!-- Chatra {literal} -->
 <script>
