--- a/index.html
+++ b/index.html
@@ -157,56 +157,22 @@
             </div>
         </section>
     </main>
-    <!--Image slider-->
-    <div class="body">
- <div class="slider">
-     <div class="slides">
-         <!--Radio buttons starts-->
-        <input type="radio" name="radio-btn" id="radio1">
-        <input type="radio" name="radio-btn" id="radio2">
-        <input type="radio" name="radio-btn" id="radio3">
-        <input type="radio" name="radio-btn" id="radio4">
-        <!--Radio button end-->
-        <!--Radio images starts-->
-        <div class="slide first">
-            <img src="images/bg-56.jpg" alt="" >
-        </div>
-        <div class="slide">
-            <img src="images/bg-52.jpg" alt="">
-        </div>
-        <div class="slide">
-            <img src="images/bg-38.jpg" alt="">
-        </div>
-        <div class="slide">
-            <img src="images/bg-37.jpg" alt="">
-        </div>
-        <!--Radio image end -->
-        <!--Automatic nav start-->
-        <div class="navigation-auto">
-            <div class="auto-btn1"></div>
-            <div class="auto-btn1"></div>
-            <div class="auto-btn1"></div>
-            <div class="auto-btn1"></div>
-        </div>
-        <!--Automatic nav end-->
-        </div>
-        <!--manual nav start-->
-        <div class="navigation-manual">
-            <label for="radio1" class="manual-btn"></label>
-            <label for="radio2" class="manual-btn"></label>
-            <label for="radio3" class="manual-btn"></label>
-            <label for="radio4" class="manual-btn"></label>
-        </div>
-        <!--manual nav end-->
- </div>
-</div>
-<!--image slider ends-->
 
+    <!--Image slider-->
+   <div id="slider">
+<figure>
+    <img src="images/bg-37.jpg" alt="">
+    <img src="images/bg-38.jpg" alt="">
+    <img src="images/shipcoloured.png" alt="">
+    <img src="images/bg-56.jpg" alt="">
+    <img src="images/bg-37.jpg" alt="">
+</figure>
+   </div>
 
 
    
-	<!-- This div targeted by Location-->	<div id=target-map></div>
-    
+    <!-- This div targeted by Location-->	
+    <div id=target-map></div>
           <!--google mapping-->
 
           <iframe class="googlemap" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3963.614125628445!2d3.3739363143268855!3d6.57028
