--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 
                 <div class="activities-grid">
                     <!--grid item #1-->
+                    <div class="hover1">
                     <div class="activities-grid-item star-gazing">
                         <i class="icon ion-md-star"></i>
                         <h1>Clearing</h1>
@@ -89,17 +90,22 @@
                             numquam at aut laudantium adipisci sit doloribus saepe, et nobis tenetur repellendus
                             corrupti impedit nemo unde.</p>
                     </div>
+                </div>
                     <!--grid item #2-->
+                    <div class="hover2">
                     <div class="activities-grid-item hiking">
                         <i class="icon ion-md-compass"></i>
                         <h1>Export/Import</h1>
                         <p>We Import goods from different Global regions and also send a product to be sold in another country eg cars,mobiles and PC's. But we dont allow illegal services.</p>
                     </div>
+                    </div>
                     <!--grid item #3-->
+                    <div class="hover3">
                     <div class="activities-grid-item camping">
                         <i class="icon ion-md-home"></i>
                         <h1>College</h1>
                         <p>This is also known as Trucking. We lift goods/containers from one destination to another and it deals with the transporting things in trucks. </p>
+                    </div>
                     </div>
                 </div>
             </div>
@@ -139,16 +145,14 @@
                     <div class="adventure-grid-item">
                         <p>
                             <b>OUR MISSION:</b>
-                            <br />
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis, sunt error quia id omnis
-                            repellat fuga deleniti atque voluptatum. Laborum provident repellendus tempore sint!
-                            Voluptates veniam corporis laudantium quae earum?
+                            <br />We work with both International and National business owners,aiming to provide our best services in order brighten the day of everyone 
+                            who contacts us by being a diligient and outstanding organisation to work with.
+                             We research,adapt and make use of modern technologies
+                              to keep our business ideas fresh.
                              <br />
                             <b>OUR VISION:</b>
                             <br />
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis, sunt error quia id omnis
-                            repellat fuga deleniti atque voluptatum. Laborum provident repellendus tempore sint!
-                            Voluptates veniam corporis laudantium quae earum?
+                            We have a vision to be the Leading Port in Africa and Nigeria,Lagos. With the aim of making Import/export of Goods and Services easier.
                         </p>
                     </div>
 
@@ -159,15 +163,7 @@
     </main>
 
     <!--Image slider-->
-   <div id="slider">
-<figure>
-    <img src="images/bg-37.jpg" alt="">
-    <img src="images/bg-38.jpg" alt="">
-    <img src="images/shipcoloured.png" alt="">
-    <img src="images/bg-56.jpg" alt="">
-    <img src="images/bg-37.jpg" alt="">
-</figure>
-   </div>
+   
 
 
    
