--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
                     <li class="nav-item">
                         <a href="#target-services" class="nav-link">Services</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="#target-booking" class="nav-link">Booking</a>
-                    </li>
+                    
                     <li class="nav-item">
                         <a href="#target-about" class="nav-link">About Us</a>
                     </li>
@@ -86,9 +84,9 @@
                     <div class="activities-grid-item star-gazing">
                         <i class="icon ion-md-star"></i>
                         <h1>Clearing</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil accusamus id eius corporis ad
-                            numquam at aut laudantium adipisci sit doloribus saepe, et nobis tenetur repellendus
-                            corrupti impedit nemo unde.</p>
+                        <p>We load goods with the process of making declarations to the Customs
+                            authorities either on the outgoing/incoming border,setting accounts for any charges.
+                        </p>
                     </div>
                 </div>
                     <!--grid item #2-->
@@ -114,13 +112,13 @@
         <section class="testimonials">
             <div class="container">
                 <div class="testimonial">
-                	<!-- This div targeted by about us-->	<div id=target-about></div>
+                	<!-- This div targeted by about us-->	
                     <div class="testimonial-text-box">
                         <p>Custom Broker & C.E.O</p>
                         <i class="icon ion-md-quote"></i>
                     </div>
                     <div class="testimonial-customer">
-                        <img src="images/Author5.png" alt="" />
+                        <img src="images/Author5.jpg" alt="" />
                         <h1>Aniode Okechukwu</h1>
                     </div>
                 </div>
@@ -130,20 +128,42 @@
         <section class="begin-adventure">
         
             <div class="container">
-                <div class="title-heading">
+                <div class="title-heading">    <div id=target-about></div>
                     <h3>Kindly Know</h3>
                     <h1>About Us</h1>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. !</p>
+                    <p>We deal on both national & International</p>
                 </div>
                 <div class="adventure-grid">
                     <!--Adv-->
                     <div class="adventure-grid-item">
-                        <p>Customs agents make the documents for 
-                            submission while rests of the documents are obtained from the client. Making shipping bill means categorization of cargo under specific classification which is an activity in the entire procedure.</p>
-                    </div>
+                        <p> 
+                            <b>BRIEF HISTORY:</b>
+                            <br>Port operations and development in Nigeria began in the middle of the 19th century. 
+                            The effort towards the provision of facilities for ocean going vessels started with the opening of Lagos
+                             Lagoon in the early 1909. The Apapa 
+                        Port in the South West was earmarked for development in 1913 and construction of the first four deep
+                         water berths of 548.64m at the port began in 1921.
+                       <br>
+                       In 2003, the Federal Government of Nigeria initiated the drive towards improving efficiency at out Ports, and the landlord model was adopted for 
+                       all the Nigerian Ports. This gave rise to the concession of 25 Terminals to private Terminal Operators with lease agreement ranging from 10-25 years. 
+                       One of the concessions was a Build, Operate and Transfer (BOT) arrangement. Also in the process of reorganising the ports, the former eight (8)
+                        ports were reduced to six (6) major ports, with two (2) ports in Lagos and four (4)in the east namely; 
+                       Lagos Port Complex, Tin Can-Island Port Complex, Calabar Port, Rivers Ports, Onne Ports Complex and Delta Ports Complex respectively.
+                       <br>
+                       In line with the reform programme, the transaction commenced with the advertisement for Expression of Interest on the 3rd of December, 2003, by the National Council on Privatization with the Bureau of Public Enterprise acting as the transaction agent. A total of 110 EOIs were harvested out of which only 94 were pre-qualified.
+                       Pre-bid conferences, Data room and physical due diligence were also done and request for proposals sent out to bidders. Technical bids were submitted and evaluated; the financial offers were also opened to determine the successful bidders.
+                       All the successful bidders negotiated their concession agreements with a Public Sector Team made up of Nigerian Ports Authority and the Bureau of Public Enterprise. Successfully negotiated agreements were signed. 
+
+                      </div>
                     <!--Adv 2-->
                     <div class="adventure-grid-item">
                         <p>
+                            <b>ABOUT:</b>
+                            <br>
+                            We are custom agents that makes the documents for 
+                                submission while rests of the documents are obtained from the client. 
+                                Making shipping bill means categorization of cargo under specific classification which is an activity in the entire procedure. We deal also deal on Freight forwarding,Import & Export, Haulage,Warehousing & Contractor
+                        <br>
                             <b>OUR MISSION:</b>
                             <br />We work with both International and National business owners,aiming to provide our best services in order brighten the day of everyone 
                             who contacts us by being a diligient and outstanding organisation to work with.
@@ -157,7 +177,7 @@
                     </div>
 
                 </div>
-                <a href="https://wa.me/+234803312 9547" class="btn">Kindly contact us</a>
+                <a href="https://wa.me/+2348033129547" class="btn">Kindly contact us</a>
             </div>
         </section>
     </main>
